# atlas

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SMOKE_TESTS.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-app.yml  build-index.yml  release-app.yml
docs/: atlas-central-hosted-index-pivot.md  decompile-determinism.md  mcp-contract.md  plan.md  rebuild-runbook.md  ui-spec.md
docs/audits/: 01_ai_authorship_audit.md  02_systems_backend_audit.md  03_modder_community_audit.md  04_user_experience_audit.md
docs/legal-spec/: lance_chunks.csv  sqlite_classes.csv  sqlite_fields.csv  sqlite_methods.csv  tantivy_documents.csv  what-the-artifact-contains.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/atlas-build/: Cargo.toml
src-tauri/crates/atlas-build/src/: main.rs
src-tauri/eval/: baseline-report.json  expanded-baseline-report.json  knn-floor-corrected.json  knn-floor-norerank.json  knn-floor-overfetch8.json  knn-floor-report.json  queries.json  rerank-gated-report.json  rerank-report.json  v2-corrected.json  v2-summaries-report.json
src-tauri/signing/: atlas-pubkey.hex
src-tauri/src/: commands.rs  config.rs  http.rs  lib.rs
src-tauri/src/diff/: compare.rs  extract.rs  mod.rs  report.rs  resolve.rs
src-tauri/src/embedder/: bge_small.rs  mod.rs
src-tauri/src/eval/: mod.rs
src-tauri/src/fetcher/: artifact.rs  download.rs  manifest.rs  mod.rs  mount.rs  signing.rs  status.rs
src-tauri/src/guides/: mod.rs
src-tauri/src/indexer/: analyzer.rs  chunker.rs  embed_cache.rs  hm_docs.rs  hypixel_docs.rs  metadata.rs  mod.rs  sanitize.rs  schema.rs  status.rs  summarizer.rs  symbols.rs  walker.rs
src-tauri/src/lance/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/patcher/: decompile.rs  extract.rs  ide.rs  java.rs  metadata.rs  mod.rs  status.rs  version.rs  vineflower.rs
src-tauri/src/project/: index.rs  mod.rs
src-tauri/src/search/: hybrid.rs  mod.rs
src-tauri/src/state/: mod.rs
src-tauri/tests/: mcp_contract.rs
src/components/: ActiveBuildChips.tsx  AppShell.tsx  BranchCard.tsx  FeedbackModal.tsx  FindOverlay.tsx  FirstRunModal.tsx  InlineJavadocBox.tsx  InstallPrereleaseGuide.tsx  KeyboardCheatsheet.tsx  LeftNav.tsx  MarkdownView.tsx  PageErrorBoundary.tsx  RightPanel.tsx  SiblingPane.tsx  SourceCode.tsx  StatusBar.tsx  TabBar.tsx
src/lib/: compare.ts  config.ts  diff.ts  editor.ts  feedback.ts  fetcher.ts  findInPage.ts  format.ts  indexer.ts  keymap.ts  patcher.ts  project.ts  shiki.ts  state.ts  utils.ts
src/pages/: DiffReport.tsx  IndexCatalog.tsx  SearchPage.tsx  SettingsPage.tsx
src/state/: branchStore.ts  configStore.ts  diffStore.ts  feedbackStore.ts  fetchStore.ts  indexStore.ts  navStore.ts  overviewStore.ts  patcherStore.ts  pinsStore.ts  projectStore.ts  searchStore.ts  tabsStore.ts  uiPrefsStore.ts
src/styles/: globals.css  tokens.css
